Updated the quantum circuit

--- a/quantummusic.ipynb
+++ b/quantummusic.ipynb
@@ -4108,64 +4108,74 @@
         "\n",
         "def quantum_pipeline_complex(feature_vector):\n",
         "    \"\"\"\n",
-        "    Builds and runs a more complex quantum circuit with scaled features.\n",
-        "    \"\"\"\n",
-        "    num_qubits = len(feature_vector)\n",
-        "    \n",
-        "    # Scale the features\n",
-        "    scaled_features = nonlinear_scale_features(feature_vector)\n",
-        "    \n",
-        "    # Print all scaled angles\n",
-        "    #for i, angle in enumerate(scaled_features):\n",
-        "    #    logging.info(f\"Feature {i}: scaled_angle = {angle:.4f}\")\n",
+        "    Quantum circuit pipeline for musical feature analysis.\n",
+        "    Input: feature_vector - PRE-SCALED angles in the correct order:\n",
+        "      [average_pitch_deviation, average_jitter, std_tempo_deviation,\n",
+        "       average_shimmer, average_lufs_energy, std_lufs_energy,\n",
+        "       std_mfcc, zero_crossing_rate, average_tone_to_noise_ratio]\n",
         "\n",
+        "    Returns: scaled_features, counts\n",
+        "    \"\"\"\n",
+        "\n",
+        "    from qiskit import QuantumCircuit, transpile\n",
+        "    from qiskit_aer import AerSimulator\n",
+        "    from qiskit.visualization import plot_histogram\n",
+        "\n",
+        "    num_qubits = 9\n",
         "    qc = QuantumCircuit(num_qubits, num_qubits)\n",
         "\n",
-        "    # 1. Initial Hadamard layer\n",
-        "    for q in range(num_qubits):\n",
-        "        qc.h(q)\n",
+        "    # Step 1: Hadamard layer for initial superposition\n",
+        "    qc.h(range(num_qubits))\n",
         "\n",
-        "    # 2. First data-encoding layer (Ry)\n",
-        "    for q, angle in enumerate(scaled_features):\n",
-        "        qc.ry(angle, q)\n",
+        "    # Step 2: Feature-based rotations\n",
+        "    # Rx (Pitch/Tempo): qubits 0,1,2\n",
+        "    qc.rx(feature_vector[0], 0)  # avg pitch deviation\n",
+        "    qc.rx(feature_vector[1], 1)  # avg jitter\n",
+        "    qc.rx(feature_vector[2], 2)  # std tempo deviation\n",
         "\n",
-        "    # 3. First entangling layer: ring of CX\n",
-        "    for q in range(num_qubits):\n",
-        "        qc.cx(q, (q + 1) % num_qubits)\n",
+        "    # Ry (Dynamics/Energy): qubits 3,4,5\n",
+        "    qc.ry(feature_vector[3], 3)  # avg shimmer\n",
+        "    qc.ry(feature_vector[4], 4)  # avg LUFS energy\n",
+        "    qc.ry(feature_vector[5], 5)  # std LUFS energy (dynamic motion)\n",
         "\n",
-        "    # 4. Second data-encoding layer (Rz)\n",
-        "    for q, angle in enumerate(scaled_features):\n",
-        "        qc.rz(angle, q)\n",
+        "    # Rz (Timbre/ZCR/Tonal Clarity): qubits 6,7,8\n",
+        "    qc.rz(feature_vector[6], 6)  # std MFCC (timbre consistency)\n",
+        "    qc.rz(feature_vector[7], 7)  # zero-crossing rate\n",
+        "    qc.rz(feature_vector[8], 8)  # avg tone-to-noise ratio\n",
         "\n",
-        "    # 5. Second entangling layer: ring (reverse)\n",
-        "    for q in range(num_qubits):\n",
-        "        qc.cx((q + 1) % num_qubits, q)\n",
+        "    # Step 3: Intra-group entanglement\n",
+        "    # Rx group (pitch/tempo stability)\n",
+        "    qc.cx(0, 1)\n",
+        "    qc.cx(1, 2)\n",
         "\n",
-        "    # 6. Third data-encoding layer (Rx with half angles)\n",
-        "    for q, angle in enumerate(scaled_features):\n",
-        "        qc.rx(angle * 0.5, q)\n",
+        "    # Ry group (energy/dynamics)\n",
+        "    qc.cx(3, 4)\n",
+        "    qc.cx(4, 5)\n",
         "\n",
-        "    # 7. Nearest-neighbor chain\n",
-        "    for q in range(num_qubits - 1):\n",
-        "        qc.cx(q, q + 1)\n",
+        "    # Rz group (timbre/clarity)\n",
+        "    qc.cx(6, 7)\n",
+        "    qc.cx(7, 8)\n",
         "\n",
-        "    # 8. Measure\n",
+        "    # Step 4: Cross-group entanglement (Inter-group Coupling)\n",
+        "    qc.cx(2, 3)  # tempo stability ↔ shimmer (expressivity)\n",
+        "    qc.cx(1, 4)  # jitter ↔ avg LUFS energy\n",
+        "    qc.cx(0, 6)  # pitch stability ↔ timbre consistency (stylistic nuance)\n",
+        "    qc.cx(5, 7)  # dynamic motion ↔ zero-crossing (rhythmic clarity)\n",
+        "\n",
+        "    # Step 5: Measurement\n",
         "    qc.measure(range(num_qubits), range(num_qubits))\n",
         "\n",
-        "    # Print the circuit\n",
-        "    logging.info(\"Quantum circuit (complex version):\")\n",
-        "    logging.info(\"\\n\" + str(qc.draw(output='text')))\n",
+        "    # Optional (recommended): circuit visualization for debugging\n",
+        "    print(qc.draw(output='text'))\n",
         "\n",
-        "    # Execute\n",
-        "    backend = AerSimulator()\n",
-        "    transpiled_qc = transpile(qc, backend)\n",
-        "    job = backend.run(transpiled_qc, shots=8192)\n",
-        "    result = job.result()\n",
+        "    # Step 6: Execute on Aer simulator\n",
+        "    simulator = AerSimulator()\n",
+        "    compiled_qc = transpile(qc, simulator)\n",
+        "    result = simulator.run(compiled_qc, shots=1024).result()\n",
         "    counts = result.get_counts()\n",
         "\n",
-        "    # Print measurement counts\n",
-        "    #logging.info(f\"Measurement counts: {counts}\")\n",
-        "    return scaled_features, counts\n",
+        "    # Your existing function returns scaled features AND counts:\n",
+        "    return feature_vector, counts\n",
         "\n",
         "\n",
         "def plot_quantum_counts(counts):\n",
@@ -4660,12 +4670,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "id": "c79e6e0e",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/98/ykbpmmjd0pdf8zgd8bc1hhmr0000gn/T/ipykernel_10432/3236860307.py:40: UserWarning: kernel_size exceeds volume extent: the volume will be zero-padded.\n",
+            "  smoothed = scipy.signal.medfilt(f0, kernel_size=MEDIAN_FILTER_KERNEL_SIZE)\n",
+            "/opt/miniconda3/envs/quantumvenv/lib/python3.12/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=512\n",
+            "  warnings.warn(\n",
+            "[INFO] 15:30:46 - Pass: ContainsInstruction - 0.00906 (ms)\n",
+            "[INFO] 15:30:46 - Pass: UnitarySynthesis - 0.00811 (ms)\n",
+            "[INFO] 15:30:46 - Pass: HighLevelSynthesis - 0.13113 (ms)\n",
+            "[INFO] 15:30:46 - Pass: BasisTranslator - 0.07486 (ms)\n",
+            "[INFO] 15:30:46 - Pass: ElidePermutations - 0.02098 (ms)\n",
+            "[INFO] 15:30:46 - Pass: RemoveDiagonalGatesBeforeMeasure - 0.07105 (ms)\n",
+            "[INFO] 15:30:46 - Pass: RemoveIdentityEquivalent - 0.00811 (ms)\n",
+            "[INFO] 15:30:46 - Pass: InverseCancellation - 0.11992 (ms)\n",
+            "[INFO] 15:30:46 - Pass: CommutativeCancellation - 0.08297 (ms)\n",
+            "[INFO] 15:30:46 - Pass: ConsolidateBlocks - 0.20480 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Split2QUnitaries - 0.01669 (ms)\n",
+            "[INFO] 15:30:46 - Pass: UnitarySynthesis - 0.00501 (ms)\n",
+            "[INFO] 15:30:46 - Pass: HighLevelSynthesis - 0.10014 (ms)\n",
+            "[INFO] 15:30:46 - Pass: BasisTranslator - 0.07296 (ms)\n",
+            "[INFO] 15:30:46 - Pass: ConsolidateBlocks - 0.11182 (ms)\n",
+            "[INFO] 15:30:46 - Pass: UnitarySynthesis - 0.00691 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Depth - 0.03123 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.00906 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Size - 0.00405 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.00978 (ms)\n",
+            "[INFO] 15:30:46 - Pass: RemoveIdentityEquivalent - 0.01097 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Optimize1qGatesDecomposition - 0.15116 (ms)\n",
+            "[INFO] 15:30:46 - Pass: CommutativeCancellation - 0.06080 (ms)\n",
+            "[INFO] 15:30:46 - Pass: GatesInBasis - 0.01597 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Depth - 0.02527 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.00691 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Size - 0.00381 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.01001 (ms)\n",
+            "[INFO] 15:30:46 - Pass: RemoveIdentityEquivalent - 0.00596 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Optimize1qGatesDecomposition - 0.09799 (ms)\n",
+            "[INFO] 15:30:46 - Pass: CommutativeCancellation - 0.05412 (ms)\n",
+            "[INFO] 15:30:46 - Pass: GatesInBasis - 0.00715 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Depth - 0.01287 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.00501 (ms)\n",
+            "[INFO] 15:30:46 - Pass: Size - 0.00405 (ms)\n",
+            "[INFO] 15:30:46 - Pass: FixedPoint - 0.01001 (ms)\n",
+            "[INFO] 15:30:46 - Pass: ContainsInstruction - 0.00882 (ms)\n",
+            "[INFO] 15:30:46 - Total Transpile Time - 140.13076 (ms)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     ┌───┐ ┌────────────┐                          ┌─┐                  \n",
+            "q_0: ┤ H ├─┤ Rx(13.527) ├───■─────────■────────────┤M├──────────────────\n",
+            "     ├───┤ ├────────────┤ ┌─┴─┐       │            └╥┘┌─┐               \n",
+            "q_1: ┤ H ├─┤ Rx(15.752) ├─┤ X ├──■────┼─────────■───╫─┤M├───────────────\n",
+            "     ├───┤┌┴────────────┴┐└───┘┌─┴─┐  │         │   ║ └╥┘┌─┐            \n",
+            "q_2: ┤ H ├┤ Rx(0.012811) ├─────┤ X ├──┼────■────┼───╫──╫─┤M├────────────\n",
+            "     ├───┤└┬────────────┬┘     └───┘  │  ┌─┴─┐  │   ║  ║ └╥┘┌─┐         \n",
+            "q_3: ┤ H ├─┤ Ry(20.482) ├───■─────────┼──┤ X ├──┼───╫──╫──╫─┤M├─────────\n",
+            "     ├───┤┌┴────────────┤ ┌─┴─┐       │  └───┘┌─┴─┐ ║  ║  ║ └╥┘┌─┐      \n",
+            "q_4: ┤ H ├┤ Ry(-23.585) ├─┤ X ├──■────┼───────┤ X ├─╫──╫──╫──╫─┤M├──────\n",
+            "     ├───┤└┬────────────┤ └───┘┌─┴─┐  │       └───┘ ║  ║  ║  ║ └╥┘┌─┐   \n",
+            "q_5: ┤ H ├─┤ Ry(20.606) ├──────┤ X ├──┼────■────────╫──╫──╫──╫──╫─┤M├───\n",
+            "     ├───┤ └─┬───────┬──┘      └───┘┌─┴─┐  │   ┌─┐  ║  ║  ║  ║  ║ └╥┘   \n",
+            "q_6: ┤ H ├───┤ Rz(0) ├──────■───────┤ X ├──┼───┤M├──╫──╫──╫──╫──╫──╫────\n",
+            "     ├───┤   ├───────┤    ┌─┴─┐     └───┘┌─┴─┐ └╥┘  ║  ║  ║  ║  ║  ║ ┌─┐\n",
+            "q_7: ┤ H ├───┤ Rz(0) ├────┤ X ├──■───────┤ X ├──╫───╫──╫──╫──╫──╫──╫─┤M├\n",
+            "     ├───┤┌──┴───────┴───┐└───┘┌─┴─┐ ┌─┐ └───┘  ║   ║  ║  ║  ║  ║  ║ └╥┘\n",
+            "q_8: ┤ H ├┤ Rz(0.006075) ├─────┤ X ├─┤M├────────╫───╫──╫──╫──╫──╫──╫──╫─\n",
+            "     └───┘└──────────────┘     └───┘ └╥┘        ║   ║  ║  ║  ║  ║  ║  ║ \n",
+            "c: 9/═════════════════════════════════╩═════════╩═══╩══╩══╩══╩══╩══╩══╩═\n",
+            "                                      8         6   0  1  2  3  4  5  7 \n",
+            "Connected to database quantummusic successfully.\n",
+            "Tables ensured.\n",
+            "Database connection closed.\n"
+          ]
+        }
+      ],
       "source": [
-        "# result = grade_single_file(\"bhoop3rohan.wav\")\n",
+        "result = grade_single_file(\"Bhairav3Rohan.wav\")\n",
         "#result  # Uncomment to see full analysis dictionary"
       ]
     },
