--- a/02-quantumanalysis.ipynb
+++ b/02-quantumanalysis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All Analysis Complete, last record was  1950\n",
-      "Database connection closed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% [markdown]\n",
     "# # Quantum Analysis Notebook\n",
@@ -472,7 +463,7 @@
     "\n",
     "# Option B: Fetch from DB (example):\n",
     "with db.conn.cursor() as cur:\n",
-    "    cur.execute(\"SELECT id FROM audio_analysis WHERE id < 1951\")\n",
+    "    cur.execute(\"SELECT id FROM audio_analysis WHERE id < 4000 AND id > 3699\")\n",
     "    rows = cur.fetchall()\n",
     "record_ids = [r[0] for r in rows]\n",
     "\n",
