--- a/03-quantumcompare.ipynb
+++ b/03-quantumcompare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,21 @@
       "  5) Angle 6: master=4.5173, student=4.7205, diff=0.2032\n",
       "\n",
       "No advanced stats differences found (or not present).\n",
+      "\n",
+      "--- Quantum Angles & Measurement Insights ---\n",
+      "Angle Differences (Musical Features):\n",
+      "  Std LUFS Energy: Master=3.7451, Student=5.6036, Diff=1.8585. Significant difference observed\n",
+      "  Average LUFS Energy: Master=3.3382, Student=1.8987, Diff=1.4395. Significant difference observed\n",
+      "  Average Shimmer (%): Master=1.2052, Student=1.7218, Diff=0.5167. Slight discrepancy in this musical feature\n",
+      "  Average Jitter (%): Master=3.7969, Student=4.0631, Diff=0.2662. Slight discrepancy in this musical feature\n",
+      "  Overall MFCC Std: Master=4.5173, Student=4.7205, Diff=0.2032. Slight discrepancy in this musical feature\n",
+      "\n",
+      "Measurement Probability Differences (Which Qubits => 1):\n",
+      "  Bitstring=101001001, MasterProb=0.003662, StudentProb=0.015137, Diff=0.011475. Measurement indicates '1' for: Average Pitch Dev, Std Tempo Dev, Std LUFS, Avg TNR\n",
+      "  Bitstring=111010111, MasterProb=0.005249, StudentProb=0.016479, Diff=0.01123. Measurement indicates '1' for: Average Pitch Dev, Average Jitter, Std Tempo Dev, Average LUFS, Overall MFCC Std, Avg ZCR, Avg TNR\n",
+      "  Bitstring=001000100, MasterProb=0.003174, StudentProb=0.014282, Diff=0.011108. Measurement indicates '1' for: Std Tempo Dev, Overall MFCC Std\n",
+      "  Bitstring=011001000, MasterProb=0.004272, StudentProb=0.014648, Diff=0.010376. Measurement indicates '1' for: Average Jitter, Std Tempo Dev, Std LUFS\n",
+      "  Bitstring=010010111, MasterProb=0.004761, StudentProb=0.015137, Diff=0.010376. Measurement indicates '1' for: Average Jitter, Average LUFS, Overall MFCC Std, Avg ZCR, Avg TNR\n",
       "\n",
       "--- Pitch Contour Deviations ---\n",
       "{'num_deviations': 10, 'pitch_tolerance_cents': 50.0, 'deviation_regions': [{'start_time': 0.011609977324263039, 'end_time': 0.40634920634920635, 'average_diff_cents': 123.25354718786855}, {'start_time': 0.6733786848072563, 'end_time': 0.6849886621315193, 'average_diff_cents': 156.19192849965032}, {'start_time': 0.9171882086167801, 'end_time': 1.1493877551020408, 'average_diff_cents': 64.91301522350356}, {'start_time': 3.308843537414966, 'end_time': 3.378503401360544, 'average_diff_cents': 185.89516681335996}, {'start_time': 3.4829931972789114, 'end_time': 3.5874829931972787, 'average_diff_cents': 128.56692929420822}, {'start_time': 4.005442176870749, 'end_time': 4.005442176870749, 'average_diff_cents': 59.996267192962705}, {'start_time': 7.964444444444444, 'end_time': 8.034104308390022, 'average_diff_cents': 151.07492854585334}, {'start_time': 8.266303854875284, 'end_time': 8.417233560090702, 'average_diff_cents': 130.96717015135584}, {'start_time': 10.994648526077098, 'end_time': 11.052698412698414, 'average_diff_cents': 187.8996657936192}, {'start_time': 11.215238095238096, 'end_time': 11.250068027210885, 'average_diff_cents': 193.12706277147998}]}\n",
@@ -100,7 +115,6 @@
     "import base64\n",
     "import io\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "# 1) Minimal Database Class\n",
     "\n",
@@ -899,6 +913,9 @@
     "    # 2) Compare classical & quantum\n",
     "    classical_comp = compare_classical_features(analysis_master, analysis_student)\n",
     "    quantum_comp   = compare_quantum_features(analysis_master, analysis_student)\n",
+    "    quantum_insights = interpret_quantum_differences(quantum_comp)\n",
+    "    analysis_student[\"master_comparison\"][\"quantum\"][\"extra_insights\"] = quantum_insights\n",
+    "    \n",
     "\n",
     "    # 3) Compare pitch\n",
     "    compare_pitch_contours(analysis_master, analysis_student, pitch_tolerance_cents=50.0)\n",
@@ -919,6 +936,36 @@
     "    print(\"\\n--- Quantum Features ---\")\n",
     "    q_summary = analysis_student[\"master_comparison\"][\"quantum\"].get(\"quantum_summary\", \"\")\n",
     "    print(q_summary)\n",
+    "\n",
+    "\n",
+    "    print(\"\\n--- Quantum Angles & Measurement Insights ---\")\n",
+    "    angles_interpretation = quantum_insights.get(\"angles_interpretation\", [])\n",
+    "    measurement_interpretation = quantum_insights.get(\"measurement_interpretation\", [])\n",
+    "\n",
+    "    if angles_interpretation:\n",
+    "        print(\"Angle Differences (Musical Features):\")\n",
+    "        for item in angles_interpretation:\n",
+    "            feature = item[\"feature_name\"]\n",
+    "            mval = item[\"master_angle\"]\n",
+    "            sval = item[\"student_angle\"]\n",
+    "            diff = item[\"angle_diff\"]\n",
+    "            meaning = item[\"interpretation\"]\n",
+    "            print(f\"  {feature}: Master={mval}, Student={sval}, Diff={diff}. {meaning}\")\n",
+    "    else:\n",
+    "        print(\"No angle interpretation found.\")\n",
+    "\n",
+    "    if measurement_interpretation:\n",
+    "        print(\"\\nMeasurement Probability Differences (Which Qubits => 1):\")\n",
+    "        for item in measurement_interpretation:\n",
+    "            bs = item[\"bitstring\"]\n",
+    "            mp = item[\"master_prob\"]\n",
+    "            sp = item[\"student_prob\"]\n",
+    "            d = item[\"diff\"]\n",
+    "            meaning = item[\"interpretation\"]\n",
+    "            print(f\"  Bitstring={bs}, MasterProb={mp}, StudentProb={sp}, Diff={d}. {meaning}\")\n",
+    "    else:\n",
+    "        print(\"No measurement interpretation found.\")\n",
+    "\n",
     "\n",
     "    pc_result = analysis_student[\"master_comparison\"].get(\"pitch_contours\", {})\n",
     "    print(\"\\n--- Pitch Contour Deviations ---\")\n",
@@ -953,6 +1000,137 @@
     "    return analysis_student\n",
     "\n",
     "\n",
+    "# 11) ADDITIONAL INTERPRETATIVE CODE FOR QUANTUM DIFFERENCES\n",
+    "\n",
+    "def _interpret_angle_differences(angle_diffs):\n",
+    "    \"\"\"\n",
+    "    angle_diffs is the list returned by _compare_scaled_angles, e.g.:\n",
+    "    [\n",
+    "      (index, master_angle, student_angle, diff),\n",
+    "      ...\n",
+    "    ]\n",
+    "\n",
+    "    We'll map each index to a human-readable feature name and provide\n",
+    "    a brief meaning for the difference.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # If your circuit has 9 angles, each index might correspond to a specific feature:\n",
+    "    angle_feature_names = [\n",
+    "        \"Average Pitch Deviation (cents)\",\n",
+    "        \"Average Jitter (%)\",\n",
+    "        \"Std Tempo Deviation\",\n",
+    "        \"Average Shimmer (%)\",\n",
+    "        \"Average LUFS Energy\",\n",
+    "        \"Std LUFS Energy\",\n",
+    "        \"Overall MFCC Std\",\n",
+    "        \"Average Zero-Crossing Rate\",\n",
+    "        \"Average Tone-to-Noise Ratio\"\n",
+    "    ]\n",
+    "\n",
+    "    interpretation = []\n",
+    "    for (idx, master_val, student_val, difference) in angle_diffs:\n",
+    "        if idx < len(angle_feature_names):\n",
+    "            feature_name = angle_feature_names[idx]\n",
+    "        else:\n",
+    "            feature_name = f\"Feature_{idx}\"  # fallback if index is out of range\n",
+    "\n",
+    "        # Provide a simple meaning for the difference. Adjust as needed:\n",
+    "        if difference < 0.1:\n",
+    "            meaning = \"Almost identical\"\n",
+    "        elif difference < 1.0:\n",
+    "            meaning = \"Slight discrepancy in this musical feature\"\n",
+    "        else:\n",
+    "            meaning = \"Significant difference observed\"\n",
+    "\n",
+    "        interpretation.append({\n",
+    "            \"feature_name\": feature_name,\n",
+    "            \"master_angle\": round(master_val, 4),\n",
+    "            \"student_angle\": round(student_val, 4),\n",
+    "            \"angle_diff\": round(difference, 4),\n",
+    "            \"interpretation\": meaning\n",
+    "        })\n",
+    "    return interpretation\n",
+    "\n",
+    "\n",
+    "def _interpret_measurement_differences(bitstring_diffs, num_qubits=9):\n",
+    "    \"\"\"\n",
+    "    bitstring_diffs is the list from _compare_bitstring_probabilities, e.g.:\n",
+    "    [\n",
+    "      (bitstring, master_prob, student_prob, diff),\n",
+    "      ...\n",
+    "    ]\n",
+    "\n",
+    "    We interpret each bitstring in terms of which qubits are '1' or '0',\n",
+    "    and possibly map each qubit to the angle/feature it represents.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # If each qubit is linked to an angle or feature index, define that here:\n",
+    "    qubit_feature_map = [\n",
+    "        \"Average Pitch Dev\",\n",
+    "        \"Average Jitter\",\n",
+    "        \"Std Tempo Dev\",\n",
+    "        \"Average Shimmer\",\n",
+    "        \"Average LUFS\",\n",
+    "        \"Std LUFS\",\n",
+    "        \"Overall MFCC Std\",\n",
+    "        \"Avg ZCR\",\n",
+    "        \"Avg TNR\"\n",
+    "    ]\n",
+    "\n",
+    "    interpretation = []\n",
+    "    for (bs, val1, val2, diff) in bitstring_diffs:\n",
+    "        # Truncate or pad the bitstring if needed\n",
+    "        bs_padded = bs[-num_qubits:].rjust(num_qubits, '0')\n",
+    "        qubit_info = []\n",
+    "        for i, bit in enumerate(bs_padded):\n",
+    "            # i=0 is leftmost bit or rightmost? Decide how you read it\n",
+    "            # We'll read from left to right: i=0 => bitstring[0]\n",
+    "            feat_name = qubit_feature_map[i] if i < len(qubit_feature_map) else f\"Qubit_{i}\"\n",
+    "            if bit == '1':\n",
+    "                qubit_info.append(feat_name)\n",
+    "        # Build a short text saying which features are 'activated' in that bitstring\n",
+    "        if qubit_info:\n",
+    "            feature_list_str = \", \".join(qubit_info)\n",
+    "            meaning = f\"Measurement indicates '1' for: {feature_list_str}\"\n",
+    "        else:\n",
+    "            meaning = \"All qubits are '0' => baseline measurement\"\n",
+    "\n",
+    "        interpretation.append({\n",
+    "            \"bitstring\": bs,\n",
+    "            \"master_prob\": round(val1, 6),\n",
+    "            \"student_prob\": round(val2, 6),\n",
+    "            \"diff\": round(diff, 6),\n",
+    "            \"interpretation\": meaning\n",
+    "        })\n",
+    "    return interpretation\n",
+    "\n",
+    "\n",
+    "def interpret_quantum_differences(quantum_results):\n",
+    "    \"\"\"\n",
+    "    Main helper to interpret the results of compare_quantum_features().\n",
+    "    quantum_results is the dictionary from that function, e.g.:\n",
+    "\n",
+    "    {\n",
+    "      \"angle_differences\": [...],\n",
+    "      \"bitstring_differences\": [...],\n",
+    "      ...\n",
+    "    }\n",
+    "\n",
+    "    We'll produce additional textual insights for angles & measurement counts.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    angle_diffs = quantum_results.get(\"angle_differences\", [])\n",
+    "    bitstring_diffs = quantum_results.get(\"bitstring_differences\", [])\n",
+    "\n",
+    "    interpreted_angles = _interpret_angle_differences(angle_diffs)\n",
+    "    interpreted_bits = _interpret_measurement_differences(bitstring_diffs, num_qubits=9)\n",
+    "\n",
+    "    # Store or return them. We'll just return a combined dict:\n",
+    "    return {\n",
+    "        \"angles_interpretation\": interpreted_angles,\n",
+    "        \"measurement_interpretation\": interpreted_bits\n",
+    "    }\n",
+    "\n",
     "\n",
     "# 10) MAIN USAGE EXAMPLE\n",
     "\n",
@@ -962,6 +1140,7 @@
     "    print(\"\\n[INFO] Running compare_analysis_results in standalone mode...\\n\")\n",
     "    # The user snippet will save images to ./output_plots\n",
     "    student_analysis_updated = compare_analysis_results(MASTER_ID, STUDENT_ID, output_dir=\"./output_plots\")\n",
+    "    \n",
     "    print(\"\\nDone.\\n\")"
    ]
   }
