--- a/04-mlmodel.ipynb
+++ b/04-mlmodel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/98/ykbpmmjd0pdf8zgd8bc1hhmr0000gn/T/ipykernel_82714/4215634923.py:636: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/98/ykbpmmjd0pdf8zgd8bc1hhmr0000gn/T/ipykernel_82714/1918989237.py:636: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(model_path, map_location=HYPERPARAMS[\"DEVICE\"])\n"
      ]
     },
@@ -31,11 +31,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to database quantummusic. (fetch-only)\n",
+      "Connected to database quantummusic_csef. (fetch-only)\n",
       "Database connection closed.\n",
-      "Inference for Record ID=1908:\n",
-      "  True raga=Marwa, True quality=5\n",
-      "  Predicted raga=Bhoop, predicted quality=5\n"
+      "Inference for Record ID=3797:\n",
+      "  True raga=Bhairav, True quality=2\n",
+      "  Predicted raga=Bhairav, predicted quality=2\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "\n",
     "# Minimal DB\n",
     "class QuantumMusicDBFetchOnly:\n",
-    "    def __init__(self, db_name=\"quantummusic\", host=\"localhost\", user=\"postgres\", password=\"postgres\"):\n",
+    "    def __init__(self, db_name=\"quantummusic_csef\", host=\"localhost\", user=\"postgres\", password=\"postgres\"):\n",
     "        import psycopg2\n",
     "        self.psycopg2 = psycopg2\n",
     "        self.db_name = db_name\n",
@@ -734,10 +734,23 @@
     "    time_matrices = analysis_data.get(\"time_matrices\", {})\n",
     "    time_matrix_small = time_matrices.get(\"time_matrix_small\", [])\n",
     "\n",
-    "    jitter_vals = [x.get(\"jitter\", 0.0) for x in time_matrix_small]\n",
-    "    shimmer_vals= [x.get(\"shimmer\", 0.0) for x in time_matrix_small]\n",
-    "    vib_vals    = [x.get(\"vibrato_rate\", 0.0) for x in time_matrix_small]\n",
-    "    f1_vals     = [x.get(\"formants\", {}).get(\"F1\", 0.0) for x in time_matrix_small]\n",
+    "    jitter_vals = [\n",
+    "        x[\"jitter\"] if (x.get(\"jitter\") is not None) else 0.0\n",
+    "        for x in time_matrix_small\n",
+    "    ]\n",
+    "    shimmer_vals = [\n",
+    "        x[\"shimmer\"] if (x.get(\"shimmer\") is not None) else 0.0\n",
+    "        for x in time_matrix_small\n",
+    "    ]\n",
+    "    vib_vals = [\n",
+    "        x[\"vibrato_rate\"] if (x.get(\"vibrato_rate\") is not None) else 0.0\n",
+    "        for x in time_matrix_small\n",
+    "    ]\n",
+    "    # formants might be nested\n",
+    "    f1_vals = [\n",
+    "        x[\"formants\"][\"F1\"] if (x.get(\"formants\") and x[\"formants\"][\"F1\"] is not None) else 0.0\n",
+    "        for x in time_matrix_small\n",
+    "    ]\n",
     "\n",
     "    avg_jitter  = float(np.mean(jitter_vals))  if jitter_vals else 0.0\n",
     "    avg_shimmer = float(np.mean(shimmer_vals)) if shimmer_vals else 0.0\n",
@@ -789,7 +802,7 @@
     "if __name__ == \"__main__\":\n",
     "    # Example usage:\n",
     "    # model, raga_map = train_model_v2()\n",
-    "    run_inference_on_persisted_model(1908, \"data/modeloutput/trained_model.pt\")\n",
+    "    run_inference_on_persisted_model(3797, \"data/modeloutput/trained_model.pt\")\n",
     "    pass"
    ]
   }
