Added inference for quality only model

--- a/04-mlmodel quality ONLY.ipynb
+++ b/04-mlmodel quality ONLY.ipynb
@@ -9,9 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using MPS device for GPU acceleration on Apple Silicon.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/98/ykbpmmjd0pdf8zgd8bc1hhmr0000gn/T/ipykernel_83311/3782387064.py:854: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load(model_path, map_location=HYPERPARAMS[\"DEVICE\"])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to database quantummusic_csef. (fetch-only)\n",
+      "Database connection closed.\n",
+      "Inference for Record ID=2661:\n",
+      "  True Quality Rating: 2\n",
+      "  Predicted Quality Rating: 2\n",
+      "Predicted Quality Rating: 2\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -860,18 +888,151 @@
     "    print(f\"Difference in Accuracy = {diff:.2f} % points\")\n",
     "\n",
     "\n",
+    "def run_quality_inference(record_id, model_path=\"data/modeloutput/trained_quality_model_quantum.pt\", include_quantum=True):\n",
+    "    \"\"\"\n",
+    "    Single-record inference using persisted Quality-only model.\n",
+    "    Set include_quantum=True for quantum-enabled models.\n",
+    "    \"\"\"\n",
+    "    # Load checkpoint\n",
+    "    checkpoint = torch.load(model_path, map_location=HYPERPARAMS[\"DEVICE\"])\n",
+    "    model_state = checkpoint[\"model_state\"]\n",
+    "    scalar_dim  = checkpoint[\"scalar_dim\"]\n",
+    "    quantum_dim = checkpoint.get(\"quantum_dim\", 0)\n",
+    "\n",
+    "    # Build the appropriate model\n",
+    "    if include_quantum:\n",
+    "        model = QualityOnlyASTModel(\n",
+    "            scalar_dim=scalar_dim,\n",
+    "            quantum_dim=quantum_dim,\n",
+    "            num_quality=5,\n",
+    "            num_unfrozen_layers=HYPERPARAMS[\"NUM_AST_LAYERS_UNFROZEN\"]\n",
+    "        )\n",
+    "    else:\n",
+    "        model = QualityOnlyASTModelNoQuantum(\n",
+    "            scalar_dim=scalar_dim,\n",
+    "            num_quality=5,\n",
+    "            num_unfrozen_layers=HYPERPARAMS[\"NUM_AST_LAYERS_UNFROZEN\"]\n",
+    "        )\n",
+    "\n",
+    "    model.load_state_dict(model_state)\n",
+    "    model.to(HYPERPARAMS[\"DEVICE\"])\n",
+    "    model.eval()\n",
+    "\n",
+    "    # Fetch single record from DB\n",
+    "    db = QuantumMusicDBFetchOnly()\n",
+    "    row = db.fetch_single_record(record_id)\n",
+    "    db.close()\n",
+    "\n",
+    "    if not row:\n",
+    "        print(f\"No record found with ID={record_id}\")\n",
+    "        return None\n",
+    "\n",
+    "    _, analysis_data = row\n",
+    "    fname = analysis_data[\"file_name\"]\n",
+    "    true_quality = parse_quality(fname)\n",
+    "\n",
+    "    # Load mel-spectrogram\n",
+    "    base_no_ext = fname.replace(\".wav\", \"\")\n",
+    "    mel_path = os.path.join(\"data\", \"analysisoutput\", f\"{base_no_ext}_mel.png\")\n",
+    "    mel_img = load_image_as_tensor(mel_path)\n",
+    "    if mel_img is None:\n",
+    "        mel_img = torch.zeros((1, 128, 128))\n",
+    "\n",
+    "    # Extract scalar features\n",
+    "    summary_dict = analysis_data.get(\"summary\", {})\n",
+    "    pitch_dev = summary_dict.get(\"pitch_deviation\", {})\n",
+    "    tnr_dict  = summary_dict.get(\"tone_to_noise_ratio\", {})\n",
+    "    praat_dict= summary_dict.get(\"praat\", {})\n",
+    "    dynamics  = summary_dict.get(\"dynamics\", {})\n",
+    "\n",
+    "    avg_dev = pitch_dev.get(\"mean\", 0.0)\n",
+    "    std_dev = pitch_dev.get(\"std\", 0.0)\n",
+    "    avg_tnr = tnr_dict.get(\"mean\", 0.0)\n",
+    "    avg_hnr = praat_dict.get(\"hnr_mean\", 0.0)\n",
+    "\n",
+    "    rms_db_stats = dynamics.get(\"rms_db\", {})\n",
+    "    mean_rms_db  = rms_db_stats.get(\"mean\", 0.0)\n",
+    "    lufs_stats   = dynamics.get(\"lufs\", {})\n",
+    "    mean_lufs    = lufs_stats.get(\"mean\", 0.0)\n",
+    "\n",
+    "    time_matrices = analysis_data.get(\"time_matrices\", {})\n",
+    "    time_matrix_small = time_matrices.get(\"time_matrix_small\", [])\n",
+    "\n",
+    "    jitter_vals = [x.get(\"jitter\", 0.0) or 0.0 for x in time_matrix_small]\n",
+    "    shimmer_vals= [x.get(\"shimmer\", 0.0) or 0.0 for x in time_matrix_small]\n",
+    "    vib_vals    = [x.get(\"vibrato_rate\", 0.0) or 0.0 for x in time_matrix_small]\n",
+    "    f1_vals     = [x.get(\"formants\", {}).get(\"F1\", 0.0) or 0.0 for x in time_matrix_small]\n",
+    "\n",
+    "    avg_jitter  = float(np.mean(jitter_vals))  if jitter_vals else 0.0\n",
+    "    avg_shimmer = float(np.mean(shimmer_vals)) if shimmer_vals else 0.0\n",
+    "    avg_vibrato = float(np.mean(vib_vals))     if vib_vals else 0.0\n",
+    "    avg_formant = float(np.mean(f1_vals))      if f1_vals else 0.0\n",
+    "\n",
+    "    scalar_features = [\n",
+    "        avg_dev, std_dev, avg_hnr, avg_tnr,\n",
+    "        mean_rms_db, mean_lufs,\n",
+    "        avg_jitter, avg_shimmer,\n",
+    "        avg_vibrato, avg_formant\n",
+    "    ]\n",
+    "\n",
+    "    # Quantum features (if applicable)\n",
+    "    combined_quantum = None\n",
+    "    if include_quantum:\n",
+    "        quantum_dict = analysis_data.get(\"quantum_analysis\", {})\n",
+    "        angles = quantum_dict.get(\"scaled_angles\", [])\n",
+    "        max_len = 10\n",
+    "        angle_arr = np.zeros(max_len, dtype=np.float32)\n",
+    "        for i in range(min(max_len, len(angles))):\n",
+    "            angle_arr[i] = angles[i]\n",
+    "\n",
+    "        counts_d = quantum_dict.get(\"measurement_counts\", {})\n",
+    "        dist_vec = convert_counts_to_probs_feature(counts_d, max_bits=10)\n",
+    "        combined_quantum = np.concatenate([angle_arr, dist_vec], axis=0)\n",
+    "\n",
+    "    # Prepare inputs\n",
+    "    device = HYPERPARAMS[\"DEVICE\"]\n",
+    "    mel_img_tensor = mel_img.unsqueeze(0).to(device)  # [1,1,128,128]\n",
+    "    scalar_tensor  = torch.tensor(scalar_features, dtype=torch.float32).unsqueeze(0).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        if include_quantum:\n",
+    "            quantum_tensor = torch.tensor(combined_quantum, dtype=torch.float32).unsqueeze(0).to(device)\n",
+    "            logits_quality = model(mel_img_tensor, scalar_tensor, quantum_tensor)\n",
+    "        else:\n",
+    "            logits_quality = model(mel_img_tensor, scalar_tensor)\n",
+    "\n",
+    "        predicted_quality_idx = logits_quality.argmax(dim=1).item()\n",
+    "        predicted_quality = predicted_quality_idx + 1  # label (0..4) => rating (1..5)\n",
+    "\n",
+    "    print(f\"Inference for Record ID={record_id}:\")\n",
+    "    print(f\"  True Quality Rating: {true_quality}\")\n",
+    "    print(f\"  Predicted Quality Rating: {predicted_quality}\")\n",
+    "\n",
+    "    return predicted_quality\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "###############################################################################\n",
     "# EXAMPLE MAIN\n",
     "###############################################################################\n",
     "if __name__ == \"__main__\":\n",
     "    # 1) Train quantum\n",
-    "    model_q = train_quality_model(include_quantum=True)\n",
+    "    #model_q = train_quality_model(include_quantum=True)\n",
     "\n",
     "    # 2) Train no-quantum\n",
-    "    model_nq = train_quality_model(include_quantum=False)\n",
+    "    #model_nq = train_quality_model(include_quantum=False)\n",
     "\n",
     "    # 3) Compare\n",
-    "    compare_quality_models()"
+    "    #compare_quality_models()\n",
+    "\n",
+    "\n",
+    "    pred_quality = run_quality_inference(\n",
+    "    record_id=2661, \n",
+    "    model_path=\"data/modeloutput/trained_quality_model_quantum_final.pt\",\n",
+    "    include_quantum=True\n",
+    "    )\n",
+    "    print(f\"Predicted Quality Rating: {pred_quality}\")\n"
    ]
   }
  ],
